--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,19 +1,17 @@
 /*
-	Halcyonic by HTML5 UP
-	html5up.net | @ajlkn
+	Halcyonic 3.1 by HTML5 UP
+	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Multi-use */
+.button-big {
+	background-image: url('images/button-big.svg');
+}
 
-	.button-big {
-		background-image: url("images/ie/button-big.svg");
-	}
+.button-big:hover {
+	background-image: url('images/button-big-hover.svg');
+}
 
-	.button-big:hover {
-		background-image: url("images/ie/button-big-hover.svg");
-	}
-
-	.button-big:active {
-		background-image: url("images/ie/button-big-active.svg");
-	}
+.button-big:active {
+	background-image: url('images/button-big-active.svg');
+}
