--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 100;
-		padding: 0;
+		padding: 00;
 		border: 0;
 		font-size: 100%;
 		font: inherit;
@@ -1527,9 +1527,9 @@
 
 /* Mobile */
 
-	/*#navPanel, #titleBar {
-		display: show;
-	}*/
+	#navPanel, #titleBar {
+		display: none;
+	}
 
 	@media screen and (max-width: 736px) {
 
@@ -1583,7 +1583,7 @@
 			}
 
 			.subpage #content-wrapper {
-				padding-top: 90px;
+				padding-top: 44px;
 			}
 
 			#footer-wrapper {
